--- a/application.yml
+++ b/application.yml
@@ -3,3 +3,10 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8010/eureka/
+---
+spring:
+  profiles: noun
+
+---
+spring:
+  profiles: sentence
