--- a/application.yml
+++ b/application.yml
@@ -6,6 +6,8 @@ eureka:
 ---
 spring:
   profiles: noun
+words: boat,book,vote,seat,backpack,partition,groundhog
+
 ---
 spring:
   profiles: sentence
