--- a/application.yml
+++ b/application.yml
@@ -5,7 +5,7 @@ eureka:
       defaultZone: http://localhost:8010/eureka/
 ---
 spring:
-  profiles: noun
+  profiles: lab-4-noun
 words: boat,book,vote,seat,backpack,partition,groundhog
 ---
 spring:
