--- a/application.yml
+++ b/application.yml
@@ -2,8 +2,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8010/eureka/
-      
+      defaultZone: http://localhost:8010/eureka/,http://localhost:8011/eureka/
 ---
 spring:
   profiles: noun
