--- a/application.yml
+++ b/application.yml
@@ -2,7 +2,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8010/eureka/,http://localhost:8011/eureka/
+      defaultZone: http://localhost:8010/eureka/,http://eureka-primary:8011/eureka/,http://eureka-secondary:8012/eureka/
 ---
 spring:
   profiles: noun
