--- a/lucky-word-client.yml
+++ b/lucky-word-client.yml
@@ -1,4 +1,4 @@
 ---
 wordConfig:
- lucky-word: Hello Spring Cloud Gurus
+ lucky-word: Hello Spring Cloud Gurus, take on the World ! 
  preamble: Exploring Spring Cloud Bus
